Fix grid margins on small devices

--- a/src/components/landing/Landing.scss
+++ b/src/components/landing/Landing.scss
@@ -83,9 +83,11 @@ $l-breakpoint: 1200px;
   }
 
   .course-program-card {
-    @media screen and (max-width: $m-breakpoint - 1px) {
-      margin-left: 16px;
-      margin-right: 16px;
+    .uk-slider {
+      @media screen and (max-width: $m-breakpoint - 1px) {
+        margin-left: 16px;
+        margin-right: 16px;
+      }
     }
 
     .uk-dotnav > .uk-active > * {
